<resources>
    <string name="app_name">VIBE</string>
    <string name="ask">daisy</string>
    <string name="title_activity_dashboard">dashboard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Profile Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="vibeLogoDescription">Vibe Logo</string>
    <string name="leftWave">Left Wave</string>
    <string name="exampleText">Welcome back to Vibe ! Your journey continues here. Please log in to access your account. If you are new to Vibe, tap the Register button to get started. We are excited to have you with us!</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="enterYourPassword">Please enter your password</string>
    <string name="enterYourUsername">Please enter your email</string>
    <string name="login">LOGIN</string>
    <string name="noAccount">Don\'t have an account?</string>
    <string name="registerNow">Register Now</string>
    <string name="title_activity_friends_room">FriendsRoom</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="playlists">Playlists</string>
    <string name="view_all">View All</string>
    <string name="favorite_artists">Favorite Artists</string>
    <string name="createAccount">Create an account</string>
    <string name="email">Email</string>
    <string name="pleaseEnter_your_email">Please enter your email</string>
    <string name="password_again">Password Again</string>
    <string name="please_enter_your_password_again">Please enter your password again</string>
    <string name="register">register</string>
    <string name="test_friend">Test Friend</string>
    <string name="friends">Friends</string>
    <string name="add_friends">Add Friends</string>
    <string name="search_for_a_friend">Search for a friend</string>
    <string name="suggested_tracks">Suggested Tracks</string>
    <string name="suggested_artists">Suggested Artists</string>
    <string name="forgot_pasword_message">Welcome Traveller.\n To restore your password, we will send a code to your email address.</string>
    <string name="please_enter_your_email">Please enter your email</string>
    <string name="CONTINUE">CONTINUE</string>
    <string name="enter_the_code">Please check you email and enter the code to change your password</string>
    <string name="confirm">CONFIRM</string>
    <string name="enter_new_password_again">Enter new password again</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="vibing_in_your_room">Vibing in Your Room</string>
    <string name="dashboard">Dashboard</string>
    <string name="favorite_tracks">Favorite Tracks</string>
    <string name="my_room">My Room</string>
    <string name="profile">Profile</string>
    <string name="change_password">change password</string>
    <string name="Import">Import</string>
    <string name="energy">Energy</string>
    <string name="instrumentalness">Instrumentalness</string>
    <string name="mood">Mood</string>
    <string name="recommend">Recommend</string>
    <string name="updateUsername">Ahoy Viber ! Please enter the new username you wish to have</string>
    <string name="danger_zone">DANGER ZONE</string>
    <string name="goodbye_text">Goodbye Viber we are sorry to see you go :(</string>
    <string name="title_activity_manage_friends">ManageFriends</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="num_of_tracks">Number of Tracks:</string>
    <string name="total_duration">Total Duration:</string>
    <string name="creator">Creator:</string>
</resources>