<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="view.ForgotPassword"
    android:background="@color/main_bcg"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:padding="30dp">

    <ImageView
        android:layout_width="230dp"
        android:layout_height="180dp"
        android:src="@drawable/vibe_logo"
        android:layout_marginBottom="50dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/forgot_pasword_message"
        android:gravity="center"
        android:textSize="16sp"
        android:layout_marginBottom="10dp"
        />

    <EditText
        android:id="@+id/usernameField"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/input_fields"
        android:hint="@string/please_enter_your_email"
        android:inputType="text"
        android:paddingLeft="13dp"
        android:textColor="@color/white"
        android:textColorHint="@color/hint_color"
        android:textSize="12sp"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/btn_continue"
        android:layout_width="140dp"
        android:layout_height="55dp"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/CONTINUE"
        android:textSize="18sp"
        android:background="@drawable/input_fields"
        android:textColor="@color/text_color"
        >
    </Button>




</LinearLayout>