<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="registerPageViewModel"
            type="viewmodel.RegisterPageViewModel" />
    </data>


<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_theme"
    android:layout_gravity="center"
    tools:context="view.RegisterPage">

    <ImageView
        android:id="@+id/vibeLogoRegister"
        android:layout_width="230dp"
        android:layout_height="180dp"
        android:layout_marginTop="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/vibe_logo"
        app:flow_verticalAlign="center"
        android:foregroundGravity="center_vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.01"
        android:contentDescription="@string/vibeLogoDescription">
    </ImageView>

    <TextView
        android:id="@+id/registerText"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:text="@string/createAccount"
        android:textAlignment="center"
        android:textColor="@color/text_color"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/vibeLogoRegister"
        app:layout_constraintVertical_bias="0.025"
        />

    <LinearLayout
        android:id="@+id/emailHolder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.093"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/registerText"
        app:layout_constraintVertical_bias="0.056"
        android:layout_marginTop="@dimen/_7sdp"
        android:layout_marginLeft="@dimen/_20sdp"
        android:gravity="left">

        <TextView
            android:id="@+id/registerEmailTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/email"
            android:textColor="@color/text_color"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:fontFamily="@font/dmsans_medium"
            >

        </TextView>

        <EditText
            android:id="@+id/registerEmailField"
            android:layout_width="350dp"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/input_fields"
            android:hint="@string/pleaseEnter_your_email"
            android:inputType="text"
            android:paddingLeft="13dp"
            android:textColor="@color/white"
            android:textColorHint="@color/hint_color"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.524"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="pa"
            app:layout_constraintTop_toBottomOf="@id/usernameTxt"
            tools:ignore="LabelFor" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/usernameHolder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_7sdp"
        android:gravity="left"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.262"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailHolder"
        app:layout_constraintVertical_bias="0.034">

        <TextView
            android:id="@+id/registerUsernameTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/dmsans_medium"
            android:text="@string/username"
            android:textColor="@color/text_color"
            android:textSize="14sp"


            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/usernameField"
            app:layout_constraintVertical_bias="0.091" />


        <EditText
            android:id="@+id/registerUsernameField"
            android:layout_width="350dp"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:autofillHints="password"
            android:background="@drawable/input_fields"
            android:hint="@string/enterYourUsername"
            android:inputType="textWebPassword"
            android:paddingLeft="13dp"
            android:textColor="@color/white"
            android:textColorHint="@color/hint_color"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/passwordTxt">

        </EditText>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/passwordHolder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_7sdp"
        android:gravity="left"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.262"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/usernameHolder"
        app:layout_constraintVertical_bias="0.034">

        <TextView
            android:id="@+id/registerPasswordTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/dmsans_medium"
            android:text="@string/password"
            android:textColor="@color/text_color"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/usernameField"
            app:layout_constraintVertical_bias="0.091" />


        <EditText
            android:id="@+id/registerPasswordField"
            android:layout_width="350dp"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:autofillHints="password"
            android:background="@drawable/input_fields"
            android:hint="@string/enterYourPassword"
            android:inputType="textWebPassword"
            android:paddingLeft="13dp"
            android:textColor="@color/white"
            android:textColorHint="@color/hint_color"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/passwordTxt">

        </EditText>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/passwordAgainHolder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_7sdp"
        android:gravity="left"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.262"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordHolder"
        app:layout_constraintVertical_bias="0.034">

        <TextView
            android:id="@+id/registerPasswordAgainTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/dmsans_medium"
            android:text="@string/password_again"
            android:textColor="@color/text_color"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/usernameField"
            app:layout_constraintVertical_bias="0.091" />


        <EditText
            android:id="@+id/registerPasswordAgainField"
            android:layout_width="350dp"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:autofillHints="password"
            android:background="@drawable/input_fields"
            android:hint="@string/please_enter_your_password_again"
            android:inputType="textWebPassword"
            android:paddingLeft="13dp"
            android:textColor="@color/white"
            android:textColorHint="@color/hint_color"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/passwordTxt">

        </EditText>

    </LinearLayout>

    <Button
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_40sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordAgainHolder"
        android:text="@string/register"
        android:textSize="18sp"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="@drawable/input_fields"
        android:textColor="@color/secondary_app_color"
        >

    </Button>

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>