<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="loginPageViewModel"
           type="viewmodel.LoginPageViewModel" />
    </data>
<androidx.constraintlayout.widget.ConstraintLayout

    android:background="@color/main_theme"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="view.LoginPage">

    <ImageView
        android:id="@+id/vibeLogoLogin"
        android:layout_width="230dp"
        android:layout_height="180dp"
        android:layout_marginTop="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/vibe_logo"
        app:flow_verticalAlign="center"
        android:foregroundGravity="center_vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.01"
        android:contentDescription="@string/vibeLogoDescription">
    </ImageView>

    <TextView
        android:id="@+id/loginText"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/exampleText"
        android:textAlignment="center"
        android:textColor="@color/text_color"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/vibeLogoLogin"
        app:layout_constraintVertical_bias="0.025"
        />

    <TextView
        android:id="@+id/usernameTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="Email"
        android:textColor="@color/text_color"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:fontFamily="@font/dmsans_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.093"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginText"
        app:layout_constraintVertical_bias="0.056">

    </TextView>

    <EditText
        android:id="@+id/usernameField"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/input_fields"
        android:hint="@string/enterYourUsername"
        android:inputType="text"
        android:paddingLeft="13dp"
        android:textColor="@color/white"
        android:textColorHint="@color/hint_color"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.524"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/usernameTxt"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/passwordTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/dmsans_medium"
        android:text="@string/password"
        android:textColor="@color/text_color"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.093"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/usernameField"
        app:layout_constraintVertical_bias="0.091" />


    <EditText
        android:id="@+id/passwordField"
        android:layout_width="350dp"
        android:layout_height="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordTxt"
        android:layout_marginTop="10dp"
        android:background="@drawable/input_fields"
        android:inputType="textWebPassword"
        android:hint="@string/enterYourPassword"
        android:autofillHints="password"
        android:textColor="@color/white"
        android:textColorHint="@color/hint_color"
        android:textSize="12sp"
        android:paddingLeft="13dp">

    </EditText>

    <Button
        android:id="@+id/btnForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginLeft="195dp"
        android:layout_marginTop="3dp"
        android:background="@color/transparent"
        android:fontFamily="@font/dmsans_bold"
        android:text="Forgot your password?"
        android:textAllCaps="false"
        android:textColorHint="@color/text_color"
        android:textSize="12sp"
        android:textColor="@color/text_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.214"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordField"
        app:layout_constraintVertical_bias="0.0"

        >
    </Button>

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="140dp"
        android:layout_height="55dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnForgotPassword"
       android:gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/login"
        android:textSize="18sp"
        android:background="@drawable/input_fields"
        android:textColor="@color/text_color"
       >
    </Button>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.119"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginBtn"
        android:orientation="horizontal"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="65dp"
            android:fontFamily="@font/dmsans_medium"
            android:text="@string/noAccount"
            android:textColor="@color/text_color"
            android:textSize="13sp"
            >

        </TextView>

        <Button
            android:id="@+id/createAccountBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:background="@color/transparent"
            android:fontFamily="@font/dmsans_bold"
            android:text="@string/registerNow"
            android:layout_marginLeft="15dp"
            android:textAllCaps="false"
            android:textColor="@color/secondary_app_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.358"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/loginBtn">

        </Button>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
</layout>