<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/main_theme"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="view.ResetPassword">
    <ImageView
        android:id="@+id/vibeLogo"
        android:layout_width="230dp"
        android:layout_height="180dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/_40sdp"
        android:src="@drawable/vibe_logo"
        android:layout_marginBottom="50dp"/>

    <TextView
        android:id="@+id/resetPassDesc"
        android:textColor="@color/text_color"
       android:textSize="@dimen/_11sdp"
        android:gravity="center"
        android:text="Please enter your new password"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/vibeLogo"

        >

    </TextView>

    <EditText
        android:id="@+id/newPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/resetPassDesc"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/input_fields"
        android:hint="@string/enter_new_password"
        android:inputType="textPassword"
        android:paddingLeft="13dp"
        android:textColor="@color/white"
        android:textColorHint="@color/hint_color"
        android:textSize="12sp"
        tools:ignore="LabelFor"
        />

    <EditText
        android:id="@+id/newPasswordAgain"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/newPassword"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:background="@drawable/input_fields"
        android:hint="@string/enter_new_password_again"
        android:inputType="textPassword"
        android:paddingLeft="13dp"
        android:textColor="@color/white"
        android:textColorHint="@color/hint_color"
        android:textSize="12sp"
        tools:ignore="LabelFor"
        android:layout_marginBottom="10dp"
        />

    <Button
        android:id="@+id/btn_confirm"
        android:layout_width="@dimen/_110sdp"
        android:layout_height="@dimen/_40sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/newPasswordAgain"
        android:background="@drawable/btn_continue"
        android:layout_marginTop="@dimen/_40sdp"
        android:textColor="@color/white"
        android:fontFamily="@font/dmsans_bold"
        android:textSize="@dimen/_12sdp"
        android:text="@string/change_password"
        >

    </Button>

</androidx.constraintlayout.widget.ConstraintLayout>